--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
@@ -52,7 +53,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.4",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
@@ -65,6 +65,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "lint-staged": "12.3.4",
     "prettier": "^2.8.6",
-    "pretty-quick": "^3.1.3"
+    "pretty-quick": "^3.1.3",
+    "tailwindcss": "^3.4.4"
   }
 }
